# book

./: .gitignore  2_intro.html  3_kmeans.html  404.html  4_dbscan.html  5_linear_regression.html  Cargo.toml  Dockerfile  LICENSE-APACHE-2.0  LICENSE-MIT  README.md  bibliography.html  book.toml  build.docker.sh  chapter_1.html  hyperplane.tex  index.html  literature.bib  print.html  searchindex.js  searchindex.json
.github/workflows/: ci.yml  gh-pages.yml
code/: Cargo.toml
code/examples/: clustering_comparison.rs  dbscan.rs  ica.rs  kmeans.rs
code/src/: lib.rs
examples/: clustering_comparison.rs  dbscan.rs  kmeans.rs  linear_regression.rs
mdbook-scientific/: Cargo.toml  README.md  scientific.css
mdbook-scientific/src/: bibliography.rs  error.rs  fragments.rs  lib.rs  main.rs  preprocess.rs
src/: 2_intro.md  3_kmeans.md  4_dbscan.md  5_linear_regression.md  SUMMARY.md  chapter_1.md  lib.rs  mdbook_scientific_demo.md
