[package]
name = "linfa-book"
version = "0.2.0"
authors = ["Christopher Moran <cmoran@cmoran.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3"
ndarray = "0.15"
ndarray-stats = "0.5"
linfa = "0.7"
linfa-clustering = "0.7"
linfa-linear = "0.7"
linfa-datasets = {version = "0.7", features = ["winequality", "diabetes"]}
linfa-nn = "0.7"
rand = "0.8"
