[package]
name = "code"
version = "0.1.0"
authors = ["chrism"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3"
ndarray = "0.13"
linfa = {git = "https://github.com/rust-ml/linfa", branch = "master"}
linfa-clustering = { git = "https://github.com/rust-ml/linfa/", branch = "master"}
rand = "0.7"