[package]
name = "code"
version = "0.1.0"
authors = ["chrism"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3"
ndarray = "0.14"
ndarray-rand = "0.13"
rand = { version = "0.8", features = ["small_rng"] }
# Linfa imports
linfa = {git = "https://github.com/rust-ml/linfa", branch = "master"}
linfa-clustering = { git = "https://github.com/rust-ml/linfa/", branch = "master"}
linfa-ica = { git = "https://github.com/rust-ml/linfa/", branch = "master"}
