[package]
name = "mdbook-scientific"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = { version = "0.3", default-features = false }
clap = "*"
serde = "*"
serde_json = "*"
sha2 = "0.9"
nom-bibtex = "*"
which = { version = "3", default-features = false }
